--- a/www/css/index.styl
+++ b/www/css/index.styl
@@ -22,7 +22,7 @@ $color10 = #F12F02
 
 .joydiv-controller
     position absolute
-    bottom 20%
+    bottom 35%
     left 10%
     .joydiv-up ,.joydiv-left, .joydiv-right, .joydiv-down, .joydiv-n, .joydiv-m
         position absolute
@@ -138,7 +138,8 @@ v-n" >timido derecha</button>
             padding 8px
         ul
             position absolute
-            left 25%
+            top 65%
+            left 35%
             list-style none
             text-align center
             li
