--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,38 +1,96 @@
-#controller {
+#main {
+  background: #f00;
+}
+#main #article_1 {
+  background: #ff0;
+}
+#main #article_2 {
+  background: #ff0;
+}
+#main #article_3 {
+  *zoom: 1;
+  width: auto;
+  max-width: 99%;
+  float: none;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 0;
+  padding-right: 0;
+}
+#main #article_3:before,
+#main #article_3:after {
+  content: '';
+  display: table;
+}
+#main #article_3:after {
+  clear: both;
+}
+#main #article_3 #controller {
+  *zoom: 1;
+  float: left;
+  clear: none;
+  text-align: inherit;
+  padding-left: 0;
+  padding-right: 0;
+  width: 48.5%;
+  margin-left: 0%;
+  margin-right: 3%;
+  position: absolute;
+  bottom: 35%;
+  left: 15%;
   width: 150px;
   height: 150px;
   font-size: 150px;
 }
-#controller #bgcontroller {
+#main #article_3 #controller:before,
+#main #article_3 #controller:after {
+  content: '';
+  display: table;
+}
+#main #article_3 #controller:after {
+  clear: both;
+}
+#main #article_3 #controller:nth-child(2n) {
+  margin-right: 0%;
+  float: right;
+}
+#main #article_3 #controller:nth-child(2n + 1) {
+  clear: both;
+}
+#main #article_3 #controller #bgcontroller {
   position: relative;
   background: rgba(0,68,34,0.91);
   opacity: 0.3;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
   filter: alpha(opacity=30);
   padding: 0.96em;
-  top: -45%;
+  bottom: 48%;
   left: -45%;
   -webkit-border-radius: 50em;
   border-radius: 50em;
 }
-.joydiv-controller {
-  position: absolute;
-  bottom: 35%;
-  left: 15%;
+@media only screen and (max-width: 480px) {
+  #main #article_3 #controller {
+    width: 100px;
+    height: 100px;
+    font-size: 90px;
+    bottom: 1em;
+  }
 }
-.joydiv-controller .joydiv-up,
-.joydiv-controller .joydiv-left,
-.joydiv-controller .joydiv-right,
-.joydiv-controller .joydiv-down,
-.joydiv-controller .joydiv-n,
-.joydiv-controller .joydiv-m {
+#main #article_3 #controller .joydiv-up,
+#main #article_3 #controller .joydiv-left,
+#main #article_3 #controller .joydiv-right,
+#main #article_3 #controller .joydiv-down,
+#main #article_3 #controller .joydiv-n,
+#main #article_3 #controller .joydiv-m {
   position: absolute;
   width: 0;
   height: 0;
   background: transparent;
   border: solid transparent;
 }
-.joydiv-controller .joydiv-up {
+#main #article_3 #controller .joydiv-up {
   top: -40%;
   left: 50%;
   margin-left: -40%;
@@ -42,7 +100,7 @@
   border-right-width: 0.4em;
   border-bottom-width: 0.45em;
 }
-.joydiv-controller .joydiv-left {
+#main #article_3 #controller .joydiv-left {
   left: -40%;
   top: 35%;
   border-right-color: #f3b802;
@@ -52,7 +110,7 @@
   border-bottom-width: 0.4em;
   margin-top: -25%;
 }
-.joydiv-controller .joydiv-right {
+#main #article_3 #controller .joydiv-right {
   right: -40%;
   top: 50%;
   margin-top: -40%;
@@ -62,7 +120,7 @@
   border-right-width: 0;
   border-bottom-width: 0.4em;
 }
-.joydiv-controller .joydiv-down {
+#main #article_3 #controller .joydiv-down {
   bottom: -40%;
   left: 50%;
   margin-left: -40%;
@@ -72,7 +130,7 @@
   border-right-width: 0.4em;
   border-bottom-width: 0;
 }
-.joydiv-controller .joydiv-trackpad {
+#main #article_3 #controller .joydiv-trackpad {
   position: absolute;
   left: 25%;
   right: 25%;
@@ -82,7 +140,134 @@
   -webkit-border-radius: 20%;
   border-radius: 20%;
 }
-.joydiv-controller .joydiv-trackpad .joydiv-tracker {
+#main #article_3 #controller .joydiv-trackpad .joydiv-tracker {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 0.2em;
+  margin-left: -0.2em;
+  margin-top: -0.2em;
+  border-color: #0067c3;
+}
+#main #article_3 #controller2 {
+  *zoom: 1;
+  float: left;
+  clear: none;
+  text-align: inherit;
+  padding-left: 0;
+  padding-right: 0;
+  width: 48.5%;
+  margin-left: 0%;
+  margin-right: 3%;
+  position: absolute;
+  bottom: 35%;
+  right: 15%;
+  color: #eb012c;
+  width: 150px;
+  height: 150px;
+  font-size: 150px;
+}
+#main #article_3 #controller2:before,
+#main #article_3 #controller2:after {
+  content: '';
+  display: table;
+}
+#main #article_3 #controller2:after {
+  clear: both;
+}
+#main #article_3 #controller2:nth-child(2n) {
+  margin-right: 0%;
+  float: right;
+}
+#main #article_3 #controller2:nth-child(2n + 1) {
+  clear: both;
+}
+#main #article_3 #controller2 #bgcontroller2 {
+  position: relative;
+  background: rgba(0,68,34,0.91);
+  opacity: 0.3;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+  filter: alpha(opacity=30);
+  padding: 0.96em;
+  bottom: 47%;
+  left: -46%;
+  -webkit-border-radius: 50em;
+  border-radius: 50em;
+}
+@media only screen and (max-width: 480px) {
+  #main #article_3 #controller2 {
+    width: 100px;
+    height: 100px;
+    font-size: 90px;
+    bottom: 1em;
+  }
+}
+#main #article_3 #controller2 .joydiv-up,
+#main #article_3 #controller2 .joydiv-left,
+#main #article_3 #controller2 .joydiv-right,
+#main #article_3 #controller2 .joydiv-down,
+#main #article_3 #controller2 .joydiv-n,
+#main #article_3 #controller2 .joydiv-m {
+  position: absolute;
+  width: 0;
+  height: 0;
+  background: transparent;
+  border: solid transparent;
+}
+#main #article_3 #controller2 .joydiv-up {
+  top: -40%;
+  left: 50%;
+  margin-left: -40%;
+  border-bottom-color: #f12f02;
+  border-top-width: 0;
+  border-left-width: 0.4em;
+  border-right-width: 0.4em;
+  border-bottom-width: 0.45em;
+}
+#main #article_3 #controller2 .joydiv-left {
+  left: -40%;
+  top: 35%;
+  border-right-color: #f3b802;
+  border-top-width: 0.4em;
+  border-left-width: 0;
+  border-right-width: 0.45em;
+  border-bottom-width: 0.4em;
+  margin-top: -25%;
+}
+#main #article_3 #controller2 .joydiv-right {
+  right: -40%;
+  top: 50%;
+  margin-top: -40%;
+  border-left-color: #f3b802;
+  border-top-width: 0.4em;
+  border-left-width: 0.45em;
+  border-right-width: 0;
+  border-bottom-width: 0.4em;
+}
+#main #article_3 #controller2 .joydiv-down {
+  bottom: -40%;
+  left: 50%;
+  margin-left: -40%;
+  border-top-color: #f12f02;
+  border-top-width: 0.45em;
+  border-left-width: 0.4em;
+  border-right-width: 0.4em;
+  border-bottom-width: 0;
+}
+#main #article_3 #controller2 .joydiv-trackpad {
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  background: #01be46;
+  -webkit-border-radius: 20%;
+  border-radius: 20%;
+}
+#main #article_3 #controller2 .joydiv-trackpad .joydiv-tracker {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -95,63 +280,155 @@
   border-color: #0067c3;
 }
 /*
-v-n" >timido derecha</button>
-                <button id="joydiv-m" >timido izquierda</button>
-                <button id="joydiv-l" >zapateo</button>
+#controller
+    width:150px;
+    height:150px;
+    font-size:150px;//font-size is used to determine the size of arrows
+    #bgcontroller
+        position relative
+        background: $cinstagram
+        opacity: 0.3
+        padding: 0.96em
+        top -45%
+        left -45%
+        border-radius: 50em
+    +below( 480px )
+        width:100px;
+        height:100px;
+        font-size:90px;//font-size is used to determine the size of arrows
+        bottom: 1em
+.joydiv-controller
+    position absolute
+    bottom 35%
+    left 15%
+    .joydiv-up ,.joydiv-left, .joydiv-right, .joydiv-down, .joydiv-n, .joydiv-m
+        position absolute
+        width 0
+        height 0
+        background  transparent
+        border solid transparent
+
+    .joydiv-up
+        top -40%
+        left 50%
+        margin-left -40%
+        border-bottom-color $color10
+        border-top-width 0
+        border-left-width .40em
+        border-right-width .40em
+        border-bottom-width .45em
+
+    .joydiv-left
+        left  -40%
+        top  35%
+        border-right-color  $color9
+        border-top-width  .40em
+        border-left-width  0
+        border-right-width  .45em
+        border-bottom-width  .40em
+        margin-top -25%
+
+    .joydiv-right
+        right -40%
+        top 50%
+        margin-top -40%
+        border-left-color  $color9
+        border-top-width  .40em
+        border-left-width  .45em
+        border-right-width  0
+        border-bottom-width  .40em
+
+    .joydiv-down
+        bottom -40%
+        left 50%
+        margin-left -40%
+        border-top-color  $color10
+        border-top-width  .45em
+        border-left-width  .40em
+        border-right-width  .40em
+        border-bottom-width  0
+
+
+    .joydiv-trackpad
+        position absolute
+        left 25%
+        right 25%
+        top 25%
+        bottom 25%
+        background $color8
+        border-radius 20%
+
+        .joydiv-tracker
+            position absolute
+            top 50%
+            left 50%
+            border-radius 50%
+            border-style solid
+            border-width .2em
+            margin-left -.2em
+            margin-top -.2em
+            border-color $color7
+
+
+#joydiv-n
+    position absolute
+    background $color2
+    bottom 42%
+    right 4%
+    font-size 25px
+    border-color $color2
+    padding 0.6em 1.5em
+    +below( 480px )
+        font-size 15px
+        padding 0.6em 1.1em
+
+#joydiv-m
+    position absolute
+    background $color3
+    font-size 25px
+    padding 0.6em 1.5em
+    bottom 42%
+    right 22%
+    +below( 480px )
+        font-size 15px
+        padding 0.6em 1.1em
+
+#joydiv-l
+    position absolute
+    font-size 25px
+    background $color4
+    padding 0.6em 0.5em
+    bottom 42%
+    right 40%
+    +below( 480px )
+        font-size 15px
+        padding 0.6em 1.1em
+
+#article_2
+    position: relative
+    background $color3
+    color $color9
+    font-size 20px
+    div
+        text-align center
+        h1
+            font-weight bold
+            font-size 3.5em
+            color $color10
+            padding 8px
+        ul
+            position absolute
+            top 65%
+            left 28%
+            text-align center
+            list-style none
+            li
+                text-align center
+                line-height 2
+                font-size 1.4em
+                font-weight: bold
+                 
 */
-#joydiv-n {
-  position: absolute;
-  background: #11adb9;
-  bottom: 42%;
-  right: 4%;
-  font-size: 25px;
-  border-color: #11adb9;
-  padding: 0.6em 1.5em;
-}
-#joydiv-m {
-  position: absolute;
-  background: #009865;
-  font-size: 25px;
-  padding: 0.6em 1.5em;
-  bottom: 42%;
-  right: 22%;
-}
-#joydiv-l {
-  position: absolute;
-  font-size: 25px;
-  background: #f9ce47;
-  padding: 0.6em 0.5em;
-  bottom: 42%;
-  right: 40%;
-}
-#article_2 {
-  position: relative;
-  background: #009865;
-  color: #f3b802;
-  font-size: 20px;
-}
-#article_2 div {
-  text-align: center;
-}
-#article_2 div h1 {
-  font-weight: bold;
-  font-size: 3.5em;
-  color: #f12f02;
-  padding: 8px;
-}
-#article_2 div ul {
-  position: absolute;
-  top: 65%;
-  left: 28%;
-  text-align: center;
-  list-style: none;
-}
-#article_2 div ul li {
-  text-align: center;
-  line-height: 2;
-  font-size: 1.4em;
-  font-weight: bold;
-}
 .fadein {
   opacity: 1;
   -ms-filter: none;
