[EDIT] control de doble joystick

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,11 +1,8 @@
-#main {
-  background: #f00;
-}
 #main #article_1 {
-  background: #ff0;
+  background: #80cef0;
 }
 #main #article_2 {
-  background: #ff0;
+  background: #80cef0;
 }
 #main #article_3 {
   *zoom: 1;
