--- a/www/css/index.styl
+++ b/www/css/index.styl
@@ -30,11 +30,10 @@ $cvioleta = rgba(112, 40, 97, 1)
 
 
 #main
-    background: red
     #article_1
-        background: yellow
+        background: $ctwitter
     #article_2
-        background: yellow
+        background: $ctwitter
     #article_3
         center(99%)
         #controller
